Fix z-index

--- a/src/styles/components/ScrollBar.css
+++ b/src/styles/components/ScrollBar.css
@@ -1,6 +1,7 @@
 .ScrollBar {
   position: relative;
   background-color: var(--darken-background-color);
+  z-index: 100;
 }
 .ScrollBar_handle {
   position: absolute;
